FIX Cumulative Layout Shift of Lighthouse

--- a/src/pages/Home/Main.scoped.scss
+++ b/src/pages/Home/Main.scoped.scss
@@ -3,8 +3,10 @@
   margin-bottom: '12px';
   @include mobile {
     width: 90%;
+    min-height: 550px;
   }
   @include desktop {
     width: 1160px;
+    min-height: 677px;
   }
 }
